# hdl_localization_AutoInitialize

./: LICENSE  README.md
btc_init_localizer/: CMakeLists.txt  package.xml
btc_init_localizer/config/: btc_builder.yaml  btc_initializer.yaml
btc_init_localizer/include/btc_init_localizer/: BTC.h  btc_database.hpp
btc_init_localizer/launch/: btc_map_builder.launch  btc_ndt_initializer.launch
btc_init_localizer/src/: BTC.cpp  btc_database.cpp  btc_map_builder_node.cpp  btc_ndt_initializer_node.cpp
btc_init_localizer/srv/: EstimateInitialPose.srv
